echo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: echo
  name: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      run: echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: echo
    spec:
      containers:
      - image: inanimate/echo-server
        name: echo
        ports:
        - containerPort: 8080
        resources: {}
