ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`echo.ku`)
    kind: Rule
    services:
    - name: echo
      kind: Service
      port: 8080
